Modify usync folder path

--- a/Oazis.Api/uSync/v11/Content/camamber-sajt.config
+++ b/Oazis.Api/uSync/v11/Content/camamber-sajt.config
@@ -1,29 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="ca071577-be49-499b-8745-4205843eb906" Alias="Camamber sajt" Level="102">
-  <Info>
-    <Parent Key="1fcd07b7-15ab-4fbe-b09e-86a7fcd24da7">Sültek</Parent>
-    <Path>/[-20]/Sueltek/CamamberSajt</Path>
-    <Trashed Parent="1fcd07b7-15ab-4fbe-b09e-86a7fcd24da7">true</Trashed>
-    <ContentType>fried</ContentType>
-    <CreateDate>2023-04-08T15:32:37</CreateDate>
-    <NodeName Default="Camamber sajt" />
-    <SortOrder>1</SortOrder>
-    <Published Default="true" />
-    <Schedule />
-    <Template />
-  </Info>
-  <Properties>
-    <price>
-      <Value><![CDATA[1750]]></Value>
-    </price>
-    <productName>
-      <Value><![CDATA[Camamber sajt]]></Value>
-    </productName>
-    <serialNumber>
-      <Value><![CDATA[2]]></Value>
-    </serialNumber>
-    <type>
-      <Value><![CDATA[umb://document/b9703757ce0a4cbea6bdf4ee1d4d017d]]></Value>
-    </type>
-  </Properties>
-</Content>
+<Empty Key="ca071577-be49-499b-8745-4205843eb906" Alias="Camamber sajt" Change="Delete" Level="101" />
