--- a/Oazis.Api/uSync/v11/Content/heti-menue.config
+++ b/Oazis.Api/uSync/v11/Content/heti-menue.config
@@ -7,7 +7,7 @@
     <ContentType>weeklyMenu</ContentType>
     <CreateDate>2023-06-25T21:57:22</CreateDate>
     <NodeName Default="Heti menü" />
-    <SortOrder>4</SortOrder>
+    <SortOrder>5</SortOrder>
     <Published Default="true" />
     <Schedule />
     <Template />
@@ -29,16 +29,11 @@
     {
       "contentTypeKey": "7a12194e-317f-41de-a44e-32b5b60973d3",
       "udi": "umb://element/469da0b4eaaf40088230295163460032",
-      "richText": "<h2 style=\"text-align: center;\">Heti menü ajánlatunk</h2>\n<p> </p>\n<div>\n<div>Örömmel tájékoztatjuk kedves Vendégeinket, hogy Vendéglátó Egységünkben elérhető a heti menü! Kínálatunkat rendszeresen frissítjük és minden héten változatos étellel próbálunk szolgálni.</div>\n</div>"
+      "richText": "\u003Ch2 style=\u0022text-align: center;\u0022\u003EHeti men\u00FC aj\u00E1nlatunk\u003C/h2\u003E\n\u003Cp\u003E\u00A0\u003C/p\u003E\n\u003Cdiv\u003E\n\u003Cdiv\u003E\u00D6r\u00F6mmel t\u00E1j\u00E9koztatjuk kedves Vend\u00E9geinket, hogy Vend\u00E9gl\u00E1t\u00F3 Egys\u00E9g\u00FCnkben el\u00E9rhet\u0151 a heti men\u00FC! K\u00EDn\u00E1latunkat rendszeresen friss\u00EDtj\u00FCk \u00E9s minden h\u00E9ten v\u00E1ltozatos \u00E9tellel pr\u00F3b\u00E1lunk szolg\u00E1lni.\u003C/div\u003E\n\u003C/div\u003E"
     }
   ],
   "settingsData": []
 }]]></Value>
     </gridBlock>
-    <information>
-      <Value><![CDATA[<h1 style="text-align: center;">Heti menü ajánlatunk</h1>
-<p> </p>
-<h3 style="text-align: center;">Heti menü ajánlatunkat minden héten pénteken frissítjük. Aznapi rendelésüket 10 óráig tudják leadni. A napi menü ára 1800 forint adagonként. További információkért telefonon tudnak érdeklődni.</h3>]]></Value>
-    </information>
   </Properties>
 </Content>
