--- a/Oazis.Api/uSync/v11/Content/hétfő_1t3ba4xi.config
+++ b/Oazis.Api/uSync/v11/Content/hétfő_1t3ba4xi.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="7a10fbdc-35e8-41c6-aa18-5fed3f5240c7" Alias="Hétfő" Level="4">
+<Content Key="7a10fbdc-35e8-41c6-aa18-5fed3f5240c7" Alias="Hétfő" Level="102">
   <Info>
     <Parent Key="76989abc-c321-426f-b2ea-b4089a7e6716">B hét</Parent>
-    <Path>/Oazis/HetiMenue/BHet/Hetfo</Path>
-    <Trashed>false</Trashed>
+    <Path>/[-20]/BHet/Hetfo</Path>
+    <Trashed Parent="76989abc-c321-426f-b2ea-b4089a7e6716">true</Trashed>
     <ContentType>dailyMenu</ContentType>
     <CreateDate>2023-12-17T15:49:32</CreateDate>
     <NodeName Default="Hétfő" />
@@ -18,7 +18,7 @@
     </day>
     <foods>
       <Value><![CDATA[{
-  "markup": "<ul>\n<li>Leves A</li>\n</ul>\n<p>&nbsp;</p>\n<ul>\n<li>Második B</li>\n</ul>",
+  "markup": "\u003Cul\u003E\n\u003Cli\u003ELeves A\u003C/li\u003E\n\u003C/ul\u003E\n\u003Cp\u003E\u0026nbsp;\u003C/p\u003E\n\u003Cul\u003E\n\u003Cli\u003EM\u00E1sodik B\u003C/li\u003E\n\u003C/ul\u003E",
   "blocks": {
     "contentData": [],
     "settingsData": []
