--- a/Oazis.Api/uSync/v11/Content/normál-kicsi.config
+++ b/Oazis.Api/uSync/v11/Content/normál-kicsi.config
@@ -1,29 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="7aca2a13-f9f5-45be-a5e2-34aa5ef301f8" Alias="Normál kicsi" Level="102">
-  <Info>
-    <Parent Key="2fd4aedd-9e85-47da-9db1-927bf674a6a4">Hamburgerek</Parent>
-    <Path>/[-20]/Hamburgerek/NormalKicsi</Path>
-    <Trashed Parent="2fd4aedd-9e85-47da-9db1-927bf674a6a4">true</Trashed>
-    <ContentType>hamburger</ContentType>
-    <CreateDate>2023-04-08T15:23:07</CreateDate>
-    <NodeName Default="Normál kicsi" />
-    <SortOrder>0</SortOrder>
-    <Published Default="true" />
-    <Schedule />
-    <Template />
-  </Info>
-  <Properties>
-    <price>
-      <Value><![CDATA[1400]]></Value>
-    </price>
-    <productName>
-      <Value><![CDATA[Normál kicsi]]></Value>
-    </productName>
-    <serialNumber>
-      <Value><![CDATA[2]]></Value>
-    </serialNumber>
-    <type>
-      <Value><![CDATA[]]></Value>
-    </type>
-  </Properties>
-</Content>
+<Empty Key="7aca2a13-f9f5-45be-a5e2-34aa5ef301f8" Alias="Normál kicsi" Change="Delete" Level="101" />
