--- a/Oazis.Api/uSync/v11/Content/pizza-kupon.config
+++ b/Oazis.Api/uSync/v11/Content/pizza-kupon.config
@@ -26,7 +26,7 @@
     </expiration>
     <text>
       <Value><![CDATA[{
-  "markup": "<p>Kedves Vendégeink!</p>\n<p>A pizzatartó dobozaink sarkán található kuponok gyűjtésével ajándék pizzát tudnak szerezni.<br>Több információt az \"Információk\" fülön találnak.</p>",
+  "markup": "<p style=\"text-align: center;\">Kedves Vendégeink!</p>\n<p style=\"text-align: center;\">&nbsp;</p>\n<p style=\"text-align: center;\"><img src=\"?rmode=max&amp;width=180&amp;height=135\" alt=\"Test\" width=\"180\" height=\"135\" data-udi=\"umb://media/da481ffccb3d4ca2891697c8e9485519\"></p>\n<p style=\"text-align: center;\">&nbsp;</p>\n<p style=\"text-align: center;\">A pizzatartó dobozaink sarkán található kuponok gyűjtésével ajándék pizzát tudnak szerezni.<br>Több információt az \"Információk\" fülön találnak.</p>\n<p>&nbsp;</p>\n<p style=\"text-align: center;\">Kedves Vendégeink!</p>\n<p style=\"text-align: center;\">A pizzatartó dobozaink sarkán található kuponok gyűjtésével ajándék pizzát tudnak szerezni.<br>Több információt az \"Információk\" fülön találnak.</p>\n<p style=\"text-align: center;\">&nbsp;</p>\n<p style=\"text-align: center;\">Kedves Vendégeink!</p>\n<p style=\"text-align: center;\">A pizzatartó dobozaink sarkán található kuponok gyűjtésével ajándék pizzát tudnak szerezni.<br>Több információt az \"Információk\" fülön találnak.</p>",
   "blocks": {
     "contentData": [],
     "settingsData": []
