--- a/Oazis.Api/uSync/v11/Content/pizzák2.config
+++ b/Oazis.Api/uSync/v11/Content/pizzák2.config
@@ -1,26 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="dda484f3-679b-48ee-9eed-3a6f84699bd6" Alias="Pizzák2" Level="101">
-  <Info>
-    <Parent Key="00000000-0000-0000-0000-000000000000"></Parent>
-    <Path>/[-20]/Pizzak2</Path>
-    <Trashed Parent="ced36140-6eda-4f96-adc9-5a26fe7c02cc">true</Trashed>
-    <ContentType>pizzas</ContentType>
-    <CreateDate>2023-04-07T14:31:15</CreateDate>
-    <NodeName Default="Pizzák2" />
-    <SortOrder>2</SortOrder>
-    <Published Default="true" />
-    <Schedule />
-    <Template />
-  </Info>
-  <Properties>
-    <navigationTitle>
-      <Value><![CDATA[]]></Value>
-    </navigationTitle>
-    <navigationURL>
-      <Value><![CDATA[/menu/pizza]]></Value>
-    </navigationURL>
-    <title>
-      <Value><![CDATA[Pizzák]]></Value>
-    </title>
-  </Properties>
-</Content>
+<Empty Key="dda484f3-679b-48ee-9eed-3a6f84699bd6" Alias="Pizzák2" Change="Delete" Level="101" />
