--- a/Oazis.Api/uSync/v11/Content/suelt-1.config
+++ b/Oazis.Api/uSync/v11/Content/suelt-1.config
@@ -4,7 +4,7 @@
     <Parent Key="c7dc2311-6fad-48e7-94d7-e9b8566965df">Galery</Parent>
     <Path>/Oazis/Galery/Suelt1</Path>
     <Trashed>false</Trashed>
-    <ContentType>picture</ContentType>
+    <ContentType>galeryPicture</ContentType>
     <CreateDate>2023-08-12T11:24:49</CreateDate>
     <NodeName Default="Sült (1)" />
     <SortOrder>3</SortOrder>
