--- a/Oazis.Api/uSync/v11/Content/sueltek.config
+++ b/Oazis.Api/uSync/v11/Content/sueltek.config
@@ -1,26 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="1fcd07b7-15ab-4fbe-b09e-86a7fcd24da7" Alias="Sültek" Level="101">
-  <Info>
-    <Parent Key="00000000-0000-0000-0000-000000000000"></Parent>
-    <Path>/[-20]/Sueltek</Path>
-    <Trashed Parent="ced36140-6eda-4f96-adc9-5a26fe7c02cc">true</Trashed>
-    <ContentType>sueltek</ContentType>
-    <CreateDate>2023-04-08T15:30:58</CreateDate>
-    <NodeName Default="Sültek" />
-    <SortOrder>0</SortOrder>
-    <Published Default="true" />
-    <Schedule />
-    <Template />
-  </Info>
-  <Properties>
-    <navigationTitle>
-      <Value><![CDATA[]]></Value>
-    </navigationTitle>
-    <navigationURL>
-      <Value><![CDATA[/menu/frieds]]></Value>
-    </navigationURL>
-    <title>
-      <Value><![CDATA[Sültek]]></Value>
-    </title>
-  </Properties>
-</Content>
+<Empty Key="1fcd07b7-15ab-4fbe-b09e-86a7fcd24da7" Alias="Sültek" Change="Delete" Level="101" />
