--- a/Oazis.Api/uSync/v11/Content/vándor.config
+++ b/Oazis.Api/uSync/v11/Content/vándor.config
@@ -1,32 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="0a6eae79-ca87-40cb-9f66-0665188977a1" Alias="Vándor" Level="102">
-  <Info>
-    <Parent Key="dda484f3-679b-48ee-9eed-3a6f84699bd6">Pizzák2</Parent>
-    <Path>/[-20]/Pizzak2/Vandor</Path>
-    <Trashed Parent="dda484f3-679b-48ee-9eed-3a6f84699bd6">true</Trashed>
-    <ContentType>pizza</ContentType>
-    <CreateDate>2023-04-07T14:39:50</CreateDate>
-    <NodeName Default="Vándor" />
-    <SortOrder>1</SortOrder>
-    <Published Default="true" />
-    <Schedule />
-    <Template />
-  </Info>
-  <Properties>
-    <ingredients>
-      <Value><![CDATA[umb://document/1d8ca8f02fcc4e168069ac74c8c76da5,umb://document/8a2976d635054c0aae464929294c7342,umb://document/141f8c2b24594c7994bd079ba1af9a0c]]></Value>
-    </ingredients>
-    <price>
-      <Value><![CDATA[1700]]></Value>
-    </price>
-    <productName>
-      <Value><![CDATA[Vándor]]></Value>
-    </productName>
-    <serialNumber>
-      <Value><![CDATA[6]]></Value>
-    </serialNumber>
-    <type>
-      <Value><![CDATA[]]></Value>
-    </type>
-  </Properties>
-</Content>
+<Empty Key="0a6eae79-ca87-40cb-9f66-0665188977a1" Alias="Vándor" Change="Delete" Level="101" />
