--- a/Oazis.Api/uSync/v11/Content/fagyi.config
+++ b/Oazis.Api/uSync/v11/Content/fagyi.config
@@ -4,7 +4,7 @@
     <Parent Key="c7dc2311-6fad-48e7-94d7-e9b8566965df">Galery</Parent>
     <Path>/Oazis/Galery/Fagyi</Path>
     <Trashed>false</Trashed>
-    <ContentType>picture</ContentType>
+    <ContentType>galeryPicture</ContentType>
     <CreateDate>2023-08-12T11:23:18</CreateDate>
     <NodeName Default="Fagyi" />
     <SortOrder>1</SortOrder>
