--- a/Oazis.Api/uSync/v11/Content/főni.config
+++ b/Oazis.Api/uSync/v11/Content/főni.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="676a7659-ed79-44a6-8fc7-87654e937f02" Alias="Húsimádó" Level="4">
+<Content Key="600cd99e-82eb-429f-8cf0-5a872762cd80" Alias="Főni" Level="4">
   <Info>
     <Parent Key="6c6f8309-90b6-4cd1-935f-d0212b5da523">Pizzák</Parent>
-    <Path>/Oazis/Etlap/Pizzak/Husimado</Path>
+    <Path>/Oazis/Etlap/Pizzak/Foni</Path>
     <Trashed>false</Trashed>
     <ContentType>product</ContentType>
-    <CreateDate>2023-09-02T11:22:24</CreateDate>
-    <NodeName Default="Húsimádó" />
-    <SortOrder>0</SortOrder>
+    <CreateDate>2024-06-02T20:08:12</CreateDate>
+    <NodeName Default="Főni" />
+    <SortOrder>1</SortOrder>
     <Published Default="true" />
     <Schedule />
     <Template />
@@ -17,19 +17,19 @@
       <Value><![CDATA[Yes]]></Value>
     </hasSecondPrice>
     <ingredients>
-      <Value><![CDATA[umb://document/1d8ca8f02fcc4e168069ac74c8c76da5,umb://document/8a2976d635054c0aae464929294c7342,umb://document/141f8c2b24594c7994bd079ba1af9a0c]]></Value>
+      <Value><![CDATA[umb://document/8a2976d635054c0aae464929294c7342,umb://document/1d8ca8f02fcc4e168069ac74c8c76da5,umb://document/141f8c2b24594c7994bd079ba1af9a0c]]></Value>
     </ingredients>
     <price>
-      <Value><![CDATA[1800]]></Value>
+      <Value><![CDATA[2500]]></Value>
     </price>
     <productName>
-      <Value><![CDATA[Húsimádó]]></Value>
+      <Value><![CDATA[Főni]]></Value>
     </productName>
     <secondPrice>
-      <Value><![CDATA[1650]]></Value>
+      <Value><![CDATA[2200]]></Value>
     </secondPrice>
     <serialNumber>
-      <Value><![CDATA[1]]></Value>
+      <Value><![CDATA[2]]></Value>
     </serialNumber>
     <typeOfFood>
       <Value><![CDATA[Pizza]]></Value>
