--- a/Oazis.Api/uSync/v11/Content/linkek.config
+++ b/Oazis.Api/uSync/v11/Content/linkek.config
@@ -4,10 +4,10 @@
     <Parent Key="2f17c934-c977-45c3-9461-0bc980f0a79c">Oázis</Parent>
     <Path>/Oazis/Linkek</Path>
     <Trashed>false</Trashed>
-    <ContentType>links</ContentType>
+    <ContentType>socialLinks</ContentType>
     <CreateDate>2023-08-23T20:58:03</CreateDate>
     <NodeName Default="Linkek" />
-    <SortOrder>7</SortOrder>
+    <SortOrder>8</SortOrder>
     <Published Default="true" />
     <Schedule />
     <Template />
