--- a/Oazis.Api/uSync/v11/usync.config
+++ b/Oazis.Api/uSync/v11/usync.config
@@ -1,2 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<uSync version="11.1.0.0" format="10.1.0" />
+<uSync version="11.1.0.0" format="10.1.0" >
+	<uSync.BackOffice>
+		<Handlers>
+			<Handler name="MediaHandler" enabled="true">
+				<Folders>
+					<Folder alias="uSync" path="~/wwwroot/App_Plugins/uSync" />
+				</Folders>
+			</Handler>
+		</Handlers>
+	</uSync.BackOffice>
+</uSync>
