Revert "Modify usync folder path"
This reverts commit 18509e7df8267e11e234ce3b83336a8b8328bda7.

--- a/Oazis.Api/uSync/v11/Content/b-hét.config
+++ b/Oazis.Api/uSync/v11/Content/b-hét.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="76989abc-c321-426f-b2ea-b4089a7e6716" Alias="B hét" Level="101">
+<Content Key="76989abc-c321-426f-b2ea-b4089a7e6716" Alias="B hét" Level="3">
   <Info>
-    <Parent Key="00000000-0000-0000-0000-000000000000"></Parent>
-    <Path>/[-20]/BHet</Path>
-    <Trashed Parent="c6cf921f-80e5-458c-8b6c-d431c4820777">true</Trashed>
+    <Parent Key="c6cf921f-80e5-458c-8b6c-d431c4820777">Heti menü</Parent>
+    <Path>/Oazis/HetiMenue/BHet</Path>
+    <Trashed>false</Trashed>
     <ContentType>weeklyGroup</ContentType>
     <CreateDate>2023-12-17T15:48:32</CreateDate>
     <NodeName Default="B hét" />
-    <SortOrder>0</SortOrder>
+    <SortOrder>1</SortOrder>
     <Published Default="true" />
     <Schedule />
     <Template />
