--- a/Oazis.Api/uSync/v11/Content/heti-menue_uellj3vg.config
+++ b/Oazis.Api/uSync/v11/Content/heti-menue_uellj3vg.config
@@ -17,10 +17,7 @@
       <Value><![CDATA[[
   {
     "key": "4f6cc9a7-9853-49e8-9848-e74fffdc45ec",
-    "mediaKey": "be64a251-1adb-454c-bc93-a3a335161601",
-    "mediaTypeAlias": "umbracoMediaVectorGraphics",
-    "crops": [],
-    "focalPoint": null
+    "mediaKey": "be64a251-1adb-454c-bc93-a3a335161601"
   }
 ]]]></Value>
     </backgroundImage>
@@ -29,11 +26,10 @@
     </expiration>
     <text>
       <Value><![CDATA[{
-  "markup": "\u003Ch2 style=\u0022text-align: center;\u0022\u003E\u003Cspan style=\u0022font-size: 36pt;\u0022\u003EMinden h\u00E9ten v\u00E1ltozatos men\u00FCkkel v\u00E1rjuk vend\u00E9geinket!\u003C/span\u003E\u003C/h2\u003E",
+  "markup": "<p>Kedves Vendégeink!<br><br>Minden héten változatos menükkel várjuk Önöket!<br>További információkat a \"Heti menü\" oldalon találnak.</p>",
   "blocks": {
     "contentData": [],
-    "settingsData": [],
-    "Layout": {}
+    "settingsData": []
   }
 }]]></Value>
     </text>
