--- a/Oazis.Api/uSync/v11/Content/húsimádó.config
+++ b/Oazis.Api/uSync/v11/Content/húsimádó.config
@@ -1,2 +1,32 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Empty Key="b9235168-1505-40df-a39e-1a3cdb22f228" Alias="Húsimádó" Change="Delete" Level="101" />
+<Content Key="b9235168-1505-40df-a39e-1a3cdb22f228" Alias="Húsimádó" Level="102">
+  <Info>
+    <Parent Key="dda484f3-679b-48ee-9eed-3a6f84699bd6">Pizzák2</Parent>
+    <Path>/[-20]/Pizzak2/Husimado</Path>
+    <Trashed Parent="dda484f3-679b-48ee-9eed-3a6f84699bd6">true</Trashed>
+    <ContentType>pizza</ContentType>
+    <CreateDate>2023-04-07T14:36:32</CreateDate>
+    <NodeName Default="Húsimádó" />
+    <SortOrder>0</SortOrder>
+    <Published Default="true" />
+    <Schedule />
+    <Template />
+  </Info>
+  <Properties>
+    <ingredients>
+      <Value><![CDATA[umb://document/141f8c2b24594c7994bd079ba1af9a0c,umb://document/8a2976d635054c0aae464929294c7342]]></Value>
+    </ingredients>
+    <price>
+      <Value><![CDATA[1800]]></Value>
+    </price>
+    <productName>
+      <Value><![CDATA[Húsimádó]]></Value>
+    </productName>
+    <serialNumber>
+      <Value><![CDATA[7]]></Value>
+    </serialNumber>
+    <type>
+      <Value><![CDATA[umb://document/40f5822389f541678514e6e0c5766d5a]]></Value>
+    </type>
+  </Properties>
+</Content>
