--- a/Oazis.Api/uSync/v11/Content/információk.config
+++ b/Oazis.Api/uSync/v11/Content/információk.config
@@ -7,31 +7,35 @@
     <ContentType>information</ContentType>
     <CreateDate>2023-06-11T14:24:44</CreateDate>
     <NodeName Default="Információk" />
-    <SortOrder>3</SortOrder>
+    <SortOrder>2</SortOrder>
     <Published Default="true" />
     <Schedule />
     <Template />
   </Info>
   <Properties>
     <address>
-      <Value><![CDATA[{
-  "markup": "\u003Cdiv\u003E\n\u003Ch2\u003EO\u00E1zis Vend\u00E9gl\u0151 \u00E9s Pizz\u00E9ria\u003C/h2\u003E\n\u003C/div\u003E\n\u003Cp\u003E2711, T\u00E1pi\u00F3szentm\u00E1rton\u003Cbr\u003EKossuth Lajos \u00FAt 78\u003C/p\u003E\n\u003Cp\u003E\u003Cstrong\u003EEl\u00E9rhet\u0151s\u00E9g:\u003C/strong\u003E \u002B30 30 1234567, \u002B36 30 1234567\u003C/p\u003E\n\u003Cp\u003E\u0026nbsp;\u003C/p\u003E\n\u003Cp\u003E\u0026nbsp;\u003C/p\u003E\n\u003Cp\u003E\u0026nbsp;\u003C/p\u003E",
-  "blocks": {
-    "contentData": [],
-    "settingsData": [],
-    "Layout": {}
-  }
-}]]></Value>
+      <Value><![CDATA[<div>
+<h2>Oázis Vendéglő és Pizzéria</h2>
+</div>
+<p>2711, Tápiószentmárton<br>Kossuth Lajos út 78</p>
+<p><strong>Elérhetőség:</strong> +30 30 1234567, +36 30 1234567</p>]]></Value>
     </address>
     <delivery>
-      <Value><![CDATA[{
-  "markup": "\u003Cdiv\u003E\n\u003Ch2\u003EKisz\u00E1ll\u00EDt\u00E1s\u003C/h2\u003E\n\u003Cdiv\u003EVend\u00E9gl\u00E1t\u00F3 egys\u00E9g\u00FCnkb\u0151l kisz\u00E1ll\u00EDt\u00E1st is kin\u00E1lunk. Rendel\u00E9sedet az el\u00E9rhet\u0151s\u00E9gekn\u00E9l l\u00E9v\u0151 telefonsz\u00E1mokon tudod leadni.\u003Cbr\u003ETov\u00E1bb\u00E1 az al\u00E1bbi a felsorol\u00E1sban l\u00E9v\u0151 telep\u00FCl\u00E9sekre v\u00E1llaljuk a kisz\u00E1ll\u00EDt\u00E1st.\u003C/div\u003E\n\u003C/div\u003E\n\u003Cdiv\u003E\n\u003Cul\u003E\n\u003Cli\u003ET\u00E1pi\u00F3bicske\u0026nbsp; \u0026nbsp; \u0026nbsp; \u0026nbsp; \u0026nbsp; 500ft\u003C/li\u003E\n\u003Cli\u003ET\u00E1pi\u00F3bicske\u0026nbsp; \u0026nbsp; \u0026nbsp; \u0026nbsp; \u0026nbsp; 500ft\u003C/li\u003E\n\u003Cli\u003ET\u00E1pi\u00F3bicske\u0026nbsp; \u0026nbsp; \u0026nbsp; \u0026nbsp; \u0026nbsp; 500ft\u003C/li\u003E\n\u003Cli\u003ET\u00E1pi\u00F3bicske\u0026nbsp; \u0026nbsp; \u0026nbsp; \u0026nbsp; \u0026nbsp; 500ft\u003C/li\u003E\n\u003Cli\u003ET\u00E1pi\u00F3bicske\u0026nbsp; \u0026nbsp; \u0026nbsp; \u0026nbsp; \u0026nbsp; 1200ft\u003C/li\u003E\n\u003C/ul\u003E\n\u003Cp\u003EA kisz\u00E1ll\u00EDtani k\u00EDv\u00E1nt rendel\u00E9s \u00F6sszeg\u00E9nek el kell \u00E9rni a 3000 ft-ot\u003C/p\u003E\n\u003C/div\u003E",
-  "blocks": {
-    "contentData": [],
-    "settingsData": [],
-    "Layout": {}
-  }
-}]]></Value>
+      <Value><![CDATA[<div>
+<h2>Kiszállítás</h2>
+<div></div>
+<div>Vendéglátó egységünkből kiszállítást is kinálunk. Rendelésedet az elérhetőségeknél lévő telefonszámokon tudod leadni.<br>Továbbá az alábbi a felsorolásban lévő településekre vállaljuk a kiszállítást.</div>
+</div>
+<div>
+<ul>
+<li>Tápióbicske          500ft</li>
+<li>Tápióbicske          500ft</li>
+<li>Tápióbicske          500ft</li>
+<li>Tápióbicske          500ft</li>
+<li>Tápióbicske          1200ft</li>
+</ul>
+<p>A kiszállítani kívánt rendelés összegének el kell érni a 3000 ft-ot</p>
+</div>]]></Value>
     </delivery>
     <location>
       <Value><![CDATA[47.33572685157286,  19.753010272096798, 17.3]]></Value>
@@ -47,14 +51,8 @@
 +36 30 1234567]]></Value>
     </phoneNumbers>
     <reservation>
-      <Value><![CDATA[{
-  "markup": "\u003Ch2\u003EAsztalfoglal\u00E1s\u003C/h2\u003E\n\u003Cp\u003ELehet\u0151s\u00E9get ny\u00FAjtunk asztalok foglal\u00E1s\u00E1ra. A foglal\u00E1st a felsorot telefonsz\u00E1mok valamelyik\u00E9n teheted meg. A lefoglalt asztalokat a foglal\u00E1si id\u0151pont kezdete ut\u00E1n legfeljebb 15 percig tartjuk fenn. Az esetleges k\u00E9s\u00E9st k\u00E9rj\u00FCk jelezd telefonon.\u003C/p\u003E",
-  "blocks": {
-    "contentData": [],
-    "settingsData": [],
-    "Layout": {}
-  }
-}]]></Value>
+      <Value><![CDATA[<h2>Asztalfoglalás</h2>
+<p>Lehetőséget nyújtunk asztalok foglalására. A foglalást a felsorot telefonszámok valamelyikén teheted meg. A lefoglalt asztalokat a foglalási időpont kezdete után legfeljebb 15 percig tartjuk fenn. Az esetleges késést kérjük jelezd telefonon.</p>]]></Value>
     </reservation>
   </Properties>
 </Content>
