--- a/Oazis.Api/uSync/v11/Content/kfc-csirkeszárny.config
+++ b/Oazis.Api/uSync/v11/Content/kfc-csirkeszárny.config
@@ -1,2 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Empty Key="80c16f6a-1666-4156-b6eb-ced8501d763a" Alias="KFC csirkeszárny" Change="Delete" Level="101" />
+<Content Key="80c16f6a-1666-4156-b6eb-ced8501d763a" Alias="KFC csirkeszárny" Level="102">
+  <Info>
+    <Parent Key="1fcd07b7-15ab-4fbe-b09e-86a7fcd24da7">Sültek</Parent>
+    <Path>/[-20]/Sueltek/KFCCsirkeszarny</Path>
+    <Trashed Parent="1fcd07b7-15ab-4fbe-b09e-86a7fcd24da7">true</Trashed>
+    <ContentType>fried</ContentType>
+    <CreateDate>2023-04-08T15:31:51</CreateDate>
+    <NodeName Default="KFC csirkeszárny" />
+    <SortOrder>0</SortOrder>
+    <Published Default="true" />
+    <Schedule />
+    <Template />
+  </Info>
+  <Properties>
+    <price>
+      <Value><![CDATA[1900]]></Value>
+    </price>
+    <productName>
+      <Value><![CDATA[KFC csirkeszárny]]></Value>
+    </productName>
+    <serialNumber>
+      <Value><![CDATA[1]]></Value>
+    </serialNumber>
+    <type>
+      <Value><![CDATA[umb://document/5ace8b094662450f885681d23e3689f0]]></Value>
+    </type>
+  </Properties>
+</Content>
