--- a/Oazis.Api/uSync/v11/Content/nagy-stek-hússal.config
+++ b/Oazis.Api/uSync/v11/Content/nagy-stek-hússal.config
@@ -1,2 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Empty Key="37e773d2-eb7d-4bfd-b9fb-6204d8b24ac7" Alias="Nagy Stek hússal" Change="Delete" Level="101" />
+<Content Key="37e773d2-eb7d-4bfd-b9fb-6204d8b24ac7" Alias="Nagy Stek hússal" Level="102">
+  <Info>
+    <Parent Key="2fd4aedd-9e85-47da-9db1-927bf674a6a4">Hamburgerek</Parent>
+    <Path>/[-20]/Hamburgerek/NagyStekHussal</Path>
+    <Trashed Parent="2fd4aedd-9e85-47da-9db1-927bf674a6a4">true</Trashed>
+    <ContentType>hamburger</ContentType>
+    <CreateDate>2023-04-08T15:29:35</CreateDate>
+    <NodeName Default="Nagy Stek hússal" />
+    <SortOrder>1</SortOrder>
+    <Published Default="true" />
+    <Schedule />
+    <Template />
+  </Info>
+  <Properties>
+    <price>
+      <Value><![CDATA[1800]]></Value>
+    </price>
+    <productName>
+      <Value><![CDATA[Nagy Stek hússal]]></Value>
+    </productName>
+    <serialNumber>
+      <Value><![CDATA[2]]></Value>
+    </serialNumber>
+    <type>
+      <Value><![CDATA[]]></Value>
+    </type>
+  </Properties>
+</Content>
