--- a/Oazis.Api/uSync/v11/Content/fagyi-2.config
+++ b/Oazis.Api/uSync/v11/Content/fagyi-2.config
@@ -4,7 +4,7 @@
     <Parent Key="c7dc2311-6fad-48e7-94d7-e9b8566965df">Galery</Parent>
     <Path>/Oazis/Galery/Fagyi2</Path>
     <Trashed>false</Trashed>
-    <ContentType>galeryPicture</ContentType>
+    <ContentType>picture</ContentType>
     <CreateDate>2023-08-12T11:25:08</CreateDate>
     <NodeName Default="Fagyi (2)" />
     <SortOrder>4</SortOrder>
