--- a/Oazis.Api/uSync/v11/usync.config
+++ b/Oazis.Api/uSync/v11/usync.config
@@ -4,7 +4,7 @@
 		<Handlers>
 			<Handler name="MediaHandler" enabled="true">
 				<Folders>
-					<Folder alias="uSync" path="~/App_Plugins/uSync" />
+					<Folder alias="uSync" path="~/wwwroot/App_Plugins/uSync" />
 				</Folders>
 			</Handler>
 		</Handlers>
