--- a/Oazis.Api/Oazis.Api.csproj
+++ b/Oazis.Api/Oazis.Api.csproj
@@ -31,6 +31,7 @@
     <PackageReference Include="Umbraco.Cms" Version="14.0.0" />
     <PackageReference Include="Umbraco.Cms.Api.Delivery" Version="14.0.0" />
     <PackageReference Include="Umbraco.Cms.PublishedCache.NuCache" Version="14.0.0" />
+    <PackageReference Include="uSync" Version="14.0.0" />
     <ProjectReference Include="..\Oazis.BLL\Oazis.BLL.csproj" />
     <RuntimeHostConfigurationOption Include="System.Globalization.AppLocalIcu" Value="72.1.0.3" Condition="$(RuntimeIdentifier.StartsWith('linux')) or $(RuntimeIdentifier.StartsWith('win')) or ('$(RuntimeIdentifier)' == '' and !$([MSBuild]::IsOSPlatform('osx')))" />
   </ItemGroup>
