upgrade umbraco version. Fix Backofficehost

--- a/Oazis.Api/appsettings.Production.json
+++ b/Oazis.Api/appsettings.Production.json
@@ -50,7 +50,8 @@
         "UpgradeUnattended": false
       },
       "Security": {
-        "AllowConcurrentLogins": false
+        "AllowConcurrentLogins": false,
+        "BackOfficeHost": "https://localhost:44370/"
       }
     }
   },
