--- a/Oazis.Api/appsettings.json
+++ b/Oazis.Api/appsettings.json
@@ -39,7 +39,7 @@
         }
       },
       "ModelsBuilder": {
-        "ModelsDirectory": "D:/OwnWorks/Oazis/Oazis.Api/Oazis.Domain/ModelsBuilder",
+        "ModelsDirectory": "D:/Works/Oazis-Api/Oazis.Domain/ModelsBuilder",
         "ModelsNamespace": "Oazis.Domain.ModelsBuilder",
         "ModelsMode": "SourceCodeManual",
         "AcceptUnsafeModelsDirectory": true
@@ -48,7 +48,8 @@
         "UpgradeUnattended": true
       },
       "Security": {
-        "AllowConcurrentLogins": false
+        "AllowConcurrentLogins": false,
+        "BackOfficeHost": "https://localhost:44370/"
       }
     }
   },
@@ -111,7 +112,7 @@
     }
   },
   "ConnectionStrings": {
-    "umbracoDbDSN": "Data Source=D:/SqLiteDatabase/OazisDB.db;Cache=Shared;Foreign Keys=True;Pooling=True",
+    "umbracoDbDSN": "Data Source=D:/Works/SQLiteDatabases/OazisDB.db;Cache=Shared;Foreign Keys=True;Pooling=True",
     "umbracoDbDSN_ProviderName": "Microsoft.Data.Sqlite"
   },
   "Kestrel": {
