Update BackOfficeHost URL in appsettings.Production.json
Changed BackOfficeHost URL in the Security section from
https://www.oazisvendeglo.hu/ to http://localhost:5000/ for
local testing and development purposes.

--- a/Oazis.Api/appsettings.Production.json
+++ b/Oazis.Api/appsettings.Production.json
@@ -51,7 +51,7 @@
       },
       "Security": {
         "AllowConcurrentLogins": false,
-        "BackOfficeHost": "https://www.oazisvendeglo.hu/"
+        "BackOfficeHost": "http://localhost:5000/"
       }
     }
   },
