Update BackOfficeHost URL for production environment
Changed the BackOfficeHost URL in the Security section of
appsettings.Production.json from http://localhost:5000/ to
https://www.oazisvendeglo.hu/ to ensure the application uses the
correct host URL in a production environment.

--- a/Oazis.Api/appsettings.Production.json
+++ b/Oazis.Api/appsettings.Production.json
@@ -51,7 +51,7 @@
       },
       "Security": {
         "AllowConcurrentLogins": false,
-        "BackOfficeHost": "http://localhost:5000/"
+        "BackOfficeHost": "https://www.oazisvendeglo.hu/"
       }
     }
   },
