--- a/Oazis.Api/appsettings.Production.json
+++ b/Oazis.Api/appsettings.Production.json
@@ -57,10 +57,10 @@
   },
   "uSync": {
     "Settings": {
-      "RootFolder": "uSync/v14/",
+      "RootFolder": "wwwroot/App_Plugins/uSync/v14/",
       "DefaultSet": "Default",
-      "ImportAtStartup": "None",
-      "ExportAtStartup": "None",
+      "ImportAtStartup": "False",
+      "ExportAtStartup": "False",
       "ExportOnSave": "All",
       "UiEnabledGroups": "",
       "ReportDebug": false,
@@ -73,7 +73,7 @@
       "SignalRRoot": "",
       "EnableHistory": true,
       "DefaultExtension": "config",
-      "MyCustomSetting": true,
+      "MyCustomSetting": true
     },
     "Sets": {
       "Default": {
