Update deploy.yaml for Production environment
Updated the `dotnet build` and `dotnet publish` commands in the `deploy.yaml` file to include the `/p:EnvironmentName=Production` parameter. This ensures that the build and publish processes use the Production environment configuration, affecting settings like configuration files and connection strings.

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,10 +23,10 @@ jobs:
         run: dotnet restore
 
       - name: Build .NET project
-        run: dotnet build -c Release
+        run: dotnet build -c Release /p:EnvironmentName=Production
 
       - name: Publish .NET project
-        run: dotnet publish -c Release -o ./oazis-api
+        run: dotnet publish -c Release /p:EnvironmentName=Production -o ./oazis-api
 
       - name: Backup current project directory
         uses: appleboy/ssh-action@v0.1.4
